# restobot-

./: .env  .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  main.py
app/database/: pinecone.py  postgres.py
app/middleware/: auth_middleware.py
app/models/: schemas.py
app/routers/: auth.py  chat.py  documents.py  health.py  history.py  menu.py  orders.py
app/services/: auth_service.py  chat_service.py  document_service.py  menu_service.py  order_service.py
